<resources>
    <string name="app_name">Pink App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_loaisanpham_">Loại sản phẩm</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_tatcasanpham">TatcasanphamActivity</string>
    <string name="login_title">ĐĂNG NHẬP</string>
    <string name="login_lable1">Tài Khoản</string>
    <string name="login_lable2">Mật Khẩu</string>
    <string name="login_btn">Đăng nhập</string>
    <string name="register_title">TẠO TÀI KHOẢN</string>
    <string name="register_email">Email</string>
    <string name="register_btn">Đăng Ký</string>
    <string name="title_activity_giohang">GiohangActivity</string>
    <string name="title_activity_quanlydonhang__admin">QuanlydonhangActivity_Admin</string>
    <string name="title_activity_quanlytaikhoan__admin">Quanlytaikhoan_AdminActivity</string>
</resources>
